# ChangeLog for app-emacs/emacs-common-gentoo
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Jan 2011; Ulrich Mueller <ulm@gentoo.org>
  emacs-common-gentoo-1.2-r2.ebuild:
  Copied from -r1 in portage tree. Update for EAPI 4.

  01 Dec 2009; Ulrich Mueller <ulm@gentoo.org>
  emacs-common-gentoo-9999.ebuild:
  Regenerate site-gentoo file in pkg_config, too.

  08 Aug 2009; Ulrich Mueller <ulm@gentoo.org>
  emacs-common-gentoo-9999.ebuild, metadata.xml:
  Emacs 23 style icons are default now.

  16 Apr 2009; Ulrich Mueller <ulm@gentoo.org> metadata.xml,
  emacs-common-gentoo-9999.ebuild:
  Rename USE flag to "emacs23icons".

*emacs-common-gentoo-9999 (12 Apr 2009)

  12 Apr 2009; Ulrich Mueller <ulm@gentoo.org> -files/site-start.el,
  -emacs-common-gentoo-1.0-r20.ebuild +emacs-common-gentoo-9999.ebuild:
  Live CVS ebuild; LICENSE is GPL-3 now. Remove old.

*emacs-common-gentoo-1.0-r20 (29 Mar 2009)

  29 Mar 2009; Ulrich Mueller <ulm@gentoo.org> +files/site-start.el,
  -emacs-common-gentoo-1.0.ebuild, +emacs-common-gentoo-1.0-r20.ebuild:
  Sync from Portage tree. Try a different approach using CONFIG_PROTECT.

  08 Mar 2009; Ulrich Mueller <ulm@gentoo.org>
  emacs-common-gentoo-1.0.ebuild:
  PDEPEND on virtual/emacs.

  07 Mar 2009; Christian Faulhammer <fauli@gentoo.org>
  emacs-common-gentoo-1.0.ebuild:
  explicitely state GNU Emacs

*emacs-common-gentoo-1.0 (07 Mar 2009)

  07 Mar 2009; Ulrich Mueller <ulm@gentoo.org> +metadata.xml,
  +emacs-common-gentoo-1.0.ebuild:
  Initial import, successor of x11-misc/emacs-desktop.
