@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 Jan 2011; Ulrich Mueller <ulm@gentoo.org>
+  -emacs-common-gentoo-1.2-r2.ebuild, emacs-common-gentoo-9999.ebuild:
+  Moved to portage tree. Sync live ebuild.
+
   02 Jan 2011; Ulrich Mueller <ulm@gentoo.org>
   emacs-common-gentoo-1.2-r2.ebuild:
   Copied from -r1 in portage tree. Update for EAPI 4.
